syntax="proto3";

package auth_service;
option go_package="genproto/auth_service";

import "auth.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service SyncUserService {
    rpc SyncUserWithAuth(SyncUserWithAuthRequest) returns (SyncUserWithAuthResponse) {}
}

message SyncUserWithAuthRequest {
    string client_type_id = 1;
    string role_id = 2;
    string login = 3;
    string email = 4;
    string phone = 5;
    string project_id = 6;
    string company_id = 7;
    string table_id = 8;
    string password = 9;
}

message SyncUserWithAuthResponse {
    bool is_user_exists = 1;
    string user_id = 2;
}